--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -21,6 +22,7 @@
     "mongoose": "^8.15.0",
     "mongosh": "^2.5.2",
     "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "path": "^0.12.7",
     "validator": "^13.15.15"
   }
